<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:text="@string/txt_header_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        style="@style/txt_header_1" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edt_firstName"
                    style="@style/edt_style_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/edt_firstName"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/edt_lastName"
                    style="@style/edt_style_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/edt_lastName"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <EditText
                android:id="@+id/edtEmail_email"
                style="@style/edt_style_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/edtEmail_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/edtPhone_phone"
                style="@style/edt_style_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/edtPhone_phone"
                android:inputType="phone" />

            <EditText
                android:id="@+id/edt_address"
                style="@style/edt_style_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/edt_address"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/txt_dop"
                    style="@style/txt_textStyle_1" />

                <DatePicker
                    android:id="@+id/datePicker_dop"
                    android:layout_width="wrap_content"
                    android:layout_height="125dp"
                    android:background="@color/platinum"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner"
                    android:spinnersShown="true" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/txt_about"
                style="@style/txt_textStyle_1" />

            <EditText
                android:id="@+id/edtMultiLine_about"
                android:hint="@string/edtMultiLine_about"
                style="@style/edtMultiLine_style_1" />

            <Button
                android:id="@+id/button"
                android:onClick="btn_next_1_onClick"
                android:text="@string/btn_next_1"
                app:backgroundTint="@color/cyan"
                app:cornerRadius="10dp"
                style="@style/btn_style_1" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView5"
        android:text="@string/txt_pageNumber"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0"
        style="@style/txt_pageNumber_style" />

</androidx.constraintlayout.widget.ConstraintLayout>